general ui scafold

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,37 @@
-.test {
-  width: 45rem;
-  height: 45rem;
-  background-color: #d81d1d !important;
+.sidenav {
+  height: 100%;
+  width: 160px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 5rem;
+}
+
+.sidenav .general {
+  margin-bottom: 3rem;
+}
+
+.sidenav .general a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+}
+
+.sidenav .projects_text {
+  text-align: center;
+  background-color: #918a8a;
+  margin-top: 1rem;
+  font-size: 20px;
+  color: #ffffff;
+  display: block;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
 }
 /*# sourceMappingURL=style.css.map */
