--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,36 @@
-.test{
-    width: 45rem;
-    height: 45rem;
-    background-color: rgb(216, 29, 29)!important;
-}
+
+.sidenav {
+    height: 100%; 
+    width: 160px; 
+    position: fixed; 
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111; 
+    overflow-x: hidden;
+    padding-top: 5rem;
+    .general{
+        margin-bottom: 3rem;;
+        a {
+            padding: 6px 8px 6px 16px;
+            text-decoration: none;
+            font-size: 25px;
+            color: #818181;
+            display: block;
+          }
+    }
+    
+    .projects_text{
+        text-align: center;
+        background-color: rgb(145, 138, 138);
+        margin-top: 1rem;;
+        font-size: 20px;
+        color: #ffffff;
+        display: block;
+    }
+  }
+  
+  
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
