--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=MuseoModerno:wght@100;900&display=swap");
 .sidenav {
   height: 100%;
   width: 160px;
@@ -33,5 +34,43 @@
 
 .sidenav a:hover {
   color: #f1f1f1;
+}
+
+@-webkit-keyframes example {
+  from {
+    -webkit-box-shadow: 0px 0px 68px 89px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 68px 89px rgba(0, 0, 0, 0.75);
+  }
+  to {
+    -webkit-box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
+  }
+}
+
+@keyframes example {
+  from {
+    -webkit-box-shadow: 0px 0px 68px 89px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 68px 89px rgba(0, 0, 0, 0.75);
+  }
+  to {
+    -webkit-box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
+  }
+}
+
+.nothing_here {
+  padding: 2rem;
+  background-color: grey;
+  margin-top: 15rem;
+  color: white;
+  font-size: 2rem;
+  font-weight: 700;
+  font-family: 'MuseoModerno', cursive;
+  -webkit-animation-name: example;
+          animation-name: example;
+  -webkit-animation-duration: 4s;
+          animation-duration: 4s;
+  -webkit-box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
 }
 /*# sourceMappingURL=style.css.map */
