--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=MuseoModerno:wght@100;900&display=swap');
 .sidenav {
     height: 100%; 
     width: 160px; 
@@ -28,9 +28,33 @@
         color: #ffffff;
         display: block;
     }
-  }
-  
-  
+  }  
   .sidenav a:hover {
     color: #f1f1f1;
+  }
+  @keyframes example {
+    from {
+        -webkit-box-shadow: 0px 0px 68px 89px rgba(0,0,0,0.75);
+        -moz-box-shadow: 0px 0px 68px 89px rgba(0,0,0,0.75);
+        box-shadow: 0px 0px 68px 89px rgba(0,0,0,0.75);
+    }
+    to {
+      -webkit-box-shadow: 0px 0px 68px 0px rgba(0,0,0,0.75);
+      -moz-box-shadow: 0px 0px 68px 0px rgba(0,0,0,0.75);
+      box-shadow: 0px 0px 68px 0px rgba(0,0,0,0.75);;
+    }
+  }
+  .nothing_here{
+      padding:2rem;
+      background-color: grey;
+      margin-top: 15rem;
+      color:white;
+      font-size: 2rem;
+      font-weight: 700;
+      font-family: 'MuseoModerno', cursive;
+      animation-name: example;
+        animation-duration: 4s;
+        -webkit-box-shadow: 0px 0px 68px 0px rgba(0,0,0,0.75);
+      -moz-box-shadow: 0px 0px 68px 0px rgba(0,0,0,0.75);
+      box-shadow: 0px 0px 68px 0px rgba(0,0,0,0.75);;
   }
