--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -34,11 +34,15 @@
   }
   @keyframes example {
     from {
+        background-color: rgb(0, 0, 0);
+        color:rgb(8, 0, 0);
         -webkit-box-shadow: 0px 0px 68px 89px rgba(0,0,0,0.75);
         -moz-box-shadow: 0px 0px 68px 89px rgba(0,0,0,0.75);
         box-shadow: 0px 0px 68px 89px rgba(0,0,0,0.75);
     }
     to {
+        background-color: grey;
+        color:rgb(240, 219, 219);
       -webkit-box-shadow: 0px 0px 68px 0px rgba(0,0,0,0.75);
       -moz-box-shadow: 0px 0px 68px 0px rgba(0,0,0,0.75);
       box-shadow: 0px 0px 68px 0px rgba(0,0,0,0.75);;
@@ -47,8 +51,8 @@
   .nothing_here{
       padding:2rem;
       background-color: grey;
-      margin-top: 15rem;
-      color:white;
+      margin-top: 11rem;
+      color:rgb(240, 219, 219);
       font-size: 2rem;
       font-weight: 700;
       font-family: 'MuseoModerno', cursive;
