--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=MuseoModerno:wght@100;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Piedra&display=swap");
+.navbar {
+  height: 5rem;
+  background-color: #111;
+}
+
+.navbar .navbar-brand {
+  font-size: 2.5rem;
+  font-family: 'Piedra', cursive;
+  color: #f0eddb;
+}
+
 .sidenav {
   height: 100%;
   width: 160px;
@@ -45,7 +57,7 @@
   }
   to {
     background-color: grey;
-    color: #f0dbdb;
+    color: #f0eddb;
     -webkit-box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
   }
@@ -60,7 +72,7 @@
   }
   to {
     background-color: grey;
-    color: #f0dbdb;
+    color: #f0eddb;
     -webkit-box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
   }
@@ -70,7 +82,7 @@
   padding: 2rem;
   background-color: grey;
   margin-top: 11rem;
-  color: #f0dbdb;
+  color: #f0eddb;
   font-size: 2rem;
   font-weight: 700;
   font-family: 'MuseoModerno', cursive;
