--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=MuseoModerno:wght@100;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Piedra&display=swap');
+.navbar{
+    height: 5rem;
+    background-color: #111;
+    .navbar-brand{
+        font-size: 2.5rem;
+        font-family: 'Piedra', cursive;;
+        color:rgb(240, 237, 219);;}
+}
 .sidenav {
     height: 100%; 
     width: 160px; 
@@ -42,7 +51,7 @@
     }
     to {
         background-color: grey;
-        color:rgb(240, 219, 219);
+        color:rgb(240, 237, 219);
       -webkit-box-shadow: 0px 0px 68px 0px rgba(0,0,0,0.75);
       -moz-box-shadow: 0px 0px 68px 0px rgba(0,0,0,0.75);
       box-shadow: 0px 0px 68px 0px rgba(0,0,0,0.75);;
@@ -52,7 +61,7 @@
       padding:2rem;
       background-color: grey;
       margin-top: 11rem;
-      color:rgb(240, 219, 219);
+      color:rgb(240, 237, 219);
       font-size: 2rem;
       font-weight: 700;
       font-family: 'MuseoModerno', cursive;
