--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -93,4 +93,24 @@
   -webkit-box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
 }
+
+.step_div {
+  width: 100%;
+  position: relative;
+  left: 5rem;
+  height: auto;
+  background-color: red;
+}
+
+.step_div .single_step {
+  background-color: green;
+  height: 2rem;
+  margin-bottom: 0.5rem;
+}
+
+.step_div .single_step div {
+  border-right: 1px solid black;
+  border-left: 1px solid black;
+  height: 100%;
+}
 /*# sourceMappingURL=style.css.map */
