beautifying steps UI

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -305,6 +305,8 @@
 
 .step_div .single_step .priority {
   width: 6rem;
+  font-family: 'Holtwood One SC', serif;
+  font-size: 0.7rem;
 }
 
 .step_div .single_step .priority_fix {
@@ -324,7 +326,8 @@
 
 .step_div .single_step .death_line {
   background-color: whitesmoke;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+  width: 6.5rem;
+  font-size: 0.9rem;
+  font-weight: 800;
 }
 /*# sourceMappingURL=style.css.map */
