--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -219,6 +219,10 @@
       }
       .priority{
         width: 6rem;
+        font-family:'Holtwood One SC', serif; ;
+        font-size: 0.7rem;
+
+
       }
       .priority_fix{
         width: 6rem;
@@ -234,8 +238,9 @@
       }
       .death_line{
         background-color: whitesmoke;
-        padding-left: 0.5rem;
-        padding-right: 0.5rem ;
+        width: 6.5rem;;
+        font-size: 0.9rem;
+        font-weight: 800;       
 
       }
       
