--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -42,6 +42,7 @@
       cursor: cell;
     }
 }
+
 .sidenav {
     height: 100%; 
     width: 160px; 
@@ -53,20 +54,29 @@
     overflow-x: hidden;
     padding-top: 5rem;
     .general{
-        margin-bottom: 3rem;;
-        a {
-            padding: 6px 8px 6px 16px;
+        margin-bottom: 3rem;
+        div {
+            position: relative;
+            top:-3.5rem;
+            margin-left: 1rem;
             text-decoration: none;
-            font-size: 25px;
-            color: #818181;
+            font-family: 'Holtwood One SC', serif;
+            font-size: 1rem;
+            color: #f3eaea;
             display: block;
           }
+        div:hover{
+          color: #6ad324;
+          cursor:pointer
+        }
     }
+    
     .projects_text{
         text-align: center;
         background-color: rgb(145, 138, 138);
         margin-top: 1rem;;
-        font-size: 20px;
+        font-size: 1rem;
+        font-family: 'Holtwood One SC', serif;
         color: #ffffff;
         display: block;
     }
@@ -151,6 +161,41 @@
         left: -2.5rem;
       }
     }
+    @keyframes all_projects_animation {
+      from {
+          background-color: rgb(235, 227, 206);
+          color:rgb(8, 0, 0);
+          
+      }
+      to {
+          background-color: rgb(191, 216, 144);
+          color:rgb(8, 0, 0);
+        -webkit-box-shadow: 0px 0px 68px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: 0px 0px 68px 0px rgba(0,0,0,0.75);
+        box-shadow: 0px 0px 68px 0px rgba(0,0,0,0.75);;
+      }
+    }
+    .allprojects_title{
+      background-color: rgb(235, 227, 206);
+      font-family: 'Holtwood One SC', serif;
+      height: 4rem;
+      border-radius: 20px!important;
+      span{
+        position: relative;
+        left: -2.5rem;
+      }
+    }
+    .allprojects_title:hover{
+      animation-name: all_projects_animation;
+      animation-duration: 1s;
+      color:rgb(8, 0, 0);
+      background-color: rgb(191, 216, 144);
+      -webkit-box-shadow: 0px 0px 68px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: 0px 0px 68px 0px rgba(0,0,0,0.75);
+        box-shadow: 0px 0px 68px 0px rgba(0,0,0,0.75);
+        cursor: pointer;;
+    }
+
     .single_step{
       height: 2rem;
       margin-bottom: 0.5rem;
@@ -165,6 +210,7 @@
         background-color: rgb(232, 236, 241);
         font-family: 'Holtwood One SC', serif;;
       }
+      
       @keyframes project_name_fix_animation {
         from {
             background-color: rgb(245, 239, 239);
@@ -219,6 +265,11 @@
       }
       .step_name_fix{
         width: 45rem;
+        background-color: rgb(230, 220, 220);
+        font-family: 'Holtwood One SC', serif;
+      }
+      .project_desc_fix{
+        width: 100%!important;
         background-color: rgb(230, 220, 220);
         font-family: 'Holtwood One SC', serif;
       }
