--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,6 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Holtwood+One+SC&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
 @-webkit-keyframes new_buttton_animation {
   from {
     background-color: white;
@@ -374,8 +375,8 @@
 .step_div .single_step .step_name {
   width: 45rem;
   background-color: whitesmoke;
-  font-family: 'Dancing Script', cursive;
-  font-size: 1.5rem;
+  font-family: 'Indie Flower', cursive;
+  font-size: 1.1rem;
 }
 
 .step_div .single_step .step_name_fix {
