--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,24 +4,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
+
 @-webkit-keyframes new_buttton_animation {
   from {
     background-color: white;
     width: 4rem;
     height: 3rem;
   }
+
   to {
     background-color: yellowgreen;
     width: 4.5rem;
     height: 3.5rem;
   }
 }
+
 @keyframes new_buttton_animation {
   from {
     background-color: white;
     width: 4rem;
     height: 3rem;
   }
+
   to {
     background-color: yellowgreen;
     width: 4.5rem;
@@ -54,9 +58,9 @@
 
 .navbar .new_buttton:hover {
   -webkit-animation-name: new_buttton_animation;
-          animation-name: new_buttton_animation;
+  animation-name: new_buttton_animation;
   -webkit-animation-duration: 1.2s;
-          animation-duration: 1.2s;
+  animation-duration: 1.2s;
   background-color: yellowgreen;
   width: 4.5rem;
   height: 3.5rem;
@@ -101,7 +105,7 @@
   margin-top: 1rem;
   font-size: 1rem;
   font-family: 'Holtwood One SC', serif;
-  color: #ffffff;
+  color: #fff;
   display: block;
 }
 
@@ -112,6 +116,7 @@
     font-weight: 400;
     border-bottom: 1px solid #31e60d;
   }
+
   to {
     background-color: white;
     color: black;
@@ -127,6 +132,7 @@
     font-weight: 400;
     border-bottom: 1px solid #31e60d;
   }
+
   to {
     background-color: white;
     color: black;
@@ -148,9 +154,9 @@
 
 .sidenav #projects a:hover {
   -webkit-animation-name: p_names_animation;
-          animation-name: p_names_animation;
+  animation-name: p_names_animation;
   -webkit-animation-duration: 1s;
-          animation-duration: 1s;
+  animation-duration: 1s;
   color: black;
   background-color: white;
   font-weight: 900;
@@ -170,14 +176,15 @@
   from {
     background-color: black;
     color: #080000;
-    -webkit-box-shadow: 0px 0px 68px 89px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 68px 89px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0 0 68px 89px rgba(0, 0, 0, 0.75);
+    box-shadow: 0 0 68px 89px rgba(0, 0, 0, 0.75);
   }
+
   to {
     background-color: grey;
     color: #f0eddb;
-    -webkit-box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0 0 68px 0 rgba(0, 0, 0, 0.75);
+    box-shadow: 0 0 68px 0 rgba(0, 0, 0, 0.75);
   }
 }
 
@@ -185,14 +192,15 @@
   from {
     background-color: black;
     color: #080000;
-    -webkit-box-shadow: 0px 0px 68px 89px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 68px 89px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0 0 68px 89px rgba(0, 0, 0, 0.75);
+    box-shadow: 0 0 68px 89px rgba(0, 0, 0, 0.75);
   }
+
   to {
     background-color: grey;
     color: #f0eddb;
-    -webkit-box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0 0 68px 0 rgba(0, 0, 0, 0.75);
+    box-shadow: 0 0 68px 0 rgba(0, 0, 0, 0.75);
   }
 }
 
@@ -205,11 +213,11 @@
   font-weight: 700;
   font-family: 'MuseoModerno', cursive;
   -webkit-animation-name: example;
-          animation-name: example;
+  animation-name: example;
   -webkit-animation-duration: 4s;
-          animation-duration: 4s;
-  -webkit-box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
+  animation-duration: 4s;
+  -webkit-box-shadow: 0 0 68px 0 rgba(0, 0, 0, 0.75);
+  box-shadow: 0 0 68px 0 rgba(0, 0, 0, 0.75);
 }
 
 .step_div {
@@ -243,11 +251,12 @@
     background-color: #ebe3ce;
     color: #080000;
   }
+
   to {
     background-color: #bfd890;
     color: #080000;
-    -webkit-box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0 0 68px 0 rgba(0, 0, 0, 0.75);
+    box-shadow: 0 0 68px 0 rgba(0, 0, 0, 0.75);
   }
 }
 
@@ -256,11 +265,12 @@
     background-color: #ebe3ce;
     color: #080000;
   }
+
   to {
     background-color: #bfd890;
     color: #080000;
-    -webkit-box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0 0 68px 0 rgba(0, 0, 0, 0.75);
+    box-shadow: 0 0 68px 0 rgba(0, 0, 0, 0.75);
   }
 }
 
@@ -278,13 +288,13 @@
 
 .step_div .allprojects_title:hover {
   -webkit-animation-name: all_projects_animation;
-          animation-name: all_projects_animation;
+  animation-name: all_projects_animation;
   -webkit-animation-duration: 1s;
-          animation-duration: 1s;
+  animation-duration: 1s;
   color: #080000;
   background-color: #bfd890;
-  -webkit-box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 0px 68px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0 0 68px 0 rgba(0, 0, 0, 0.75);
+  box-shadow: 0 0 68px 0 rgba(0, 0, 0, 0.75);
   cursor: pointer;
 }
 
@@ -310,6 +320,7 @@
   from {
     background-color: #f5efef;
   }
+
   to {
     background-color: yellowgreen;
   }
@@ -319,6 +330,7 @@
   from {
     background-color: #f5efef;
   }
+
   to {
     background-color: yellowgreen;
   }
@@ -326,9 +338,9 @@
 
 .step_div .single_step .project_name_fix:hover {
   -webkit-animation-name: project_name_fix_animation;
-          animation-name: project_name_fix_animation;
+  animation-name: project_name_fix_animation;
   -webkit-animation-duration: 0.5s;
-          animation-duration: 0.5s;
+  animation-duration: 0.5s;
   background-color: yellowgreen;
   cursor: pointer;
 }
@@ -341,6 +353,7 @@
   from {
     fill: black;
   }
+
   to {
     fill: #668d18;
   }
@@ -350,6 +363,7 @@
   from {
     fill: black;
   }
+
   to {
     fill: #668d18;
   }
@@ -358,9 +372,9 @@
 .step_div .single_step .completed_link_fix:hover {
   fill: #668d18;
   -webkit-animation-name: completed_link_fix_animation;
-          animation-name: completed_link_fix_animation;
+  animation-name: completed_link_fix_animation;
   -webkit-animation-duration: 0.5s;
-          animation-duration: 0.5s;
+  animation-duration: 0.5s;
 }
 
 .step_div .single_step .death_line_fix {
@@ -418,4 +432,3 @@
   font-size: 0.9rem;
   font-weight: 800;
 }
-/*# sourceMappingURL=style.css.map */
