linters done all set

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,28 +4,24 @@
 @import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
-
 @-webkit-keyframes new_buttton_animation {
   from {
     background-color: white;
     width: 4rem;
     height: 3rem;
   }
-
   to {
     background-color: yellowgreen;
     width: 4.5rem;
     height: 3.5rem;
   }
 }
-
 @keyframes new_buttton_animation {
   from {
     background-color: white;
     width: 4rem;
     height: 3rem;
   }
-
   to {
     background-color: yellowgreen;
     width: 4.5rem;
@@ -58,118 +54,13 @@
 
 .navbar .new_buttton:hover {
   -webkit-animation-name: new_buttton_animation;
-  animation-name: new_buttton_animation;
+          animation-name: new_buttton_animation;
   -webkit-animation-duration: 1.2s;
-  animation-duration: 1.2s;
+          animation-duration: 1.2s;
   background-color: yellowgreen;
   width: 4.5rem;
   height: 3.5rem;
   cursor: cell;
-}
-
-.sidenav {
-  height: 100%;
-  width: 160px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  padding-top: 5rem;
-}
-
-.sidenav .general {
-  margin-bottom: 3rem;
-}
-
-.sidenav .general div {
-  position: relative;
-  top: -3.5rem;
-  margin-left: 1rem;
-  text-decoration: none;
-  font-family: 'Holtwood One SC', serif;
-  font-size: 1rem;
-  color: #f3eaea;
-  display: block;
-}
-
-.sidenav .general div:hover {
-  color: #6ad324;
-  cursor: pointer;
-}
-
-.sidenav .projects_text {
-  text-align: center;
-  background-color: #918a8a;
-  margin-top: 1rem;
-  font-size: 1rem;
-  font-family: 'Holtwood One SC', serif;
-  color: #fff;
-  display: block;
-}
-
-@-webkit-keyframes p_names_animation {
-  from {
-    background-color: #726f6f;
-    color: #201f30;
-    font-weight: 400;
-    border-bottom: 1px solid #31e60d;
-  }
-
-  to {
-    background-color: white;
-    color: black;
-    font-weight: 900;
-    border-bottom: 5px solid #31e60d;
-  }
-}
-
-@keyframes p_names_animation {
-  from {
-    background-color: #726f6f;
-    color: #201f30;
-    font-weight: 400;
-    border-bottom: 1px solid #31e60d;
-  }
-
-  to {
-    background-color: white;
-    color: black;
-    font-weight: 900;
-    border-bottom: 5px solid #31e60d;
-  }
-}
-
-.sidenav #projects {
-  max-height: 25rem;
-  overflow-y: hidden;
-}
-
-.sidenav #projects a {
-  color: white;
-  margin-bottom: 1rem;
-  font-family: 'MuseoModerno', cursive;
-}
-
-.sidenav #projects a:hover {
-  -webkit-animation-name: p_names_animation;
-  animation-name: p_names_animation;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  color: black;
-  background-color: white;
-  font-weight: 900;
-  cursor: pointer;
-  border-bottom: 5px solid #31e60d;
-}
-
-.sidenav #projects::-webkit-scrollbar {
-  display: none;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
 }
 
 @-webkit-keyframes example {
@@ -179,7 +70,6 @@
     -webkit-box-shadow: 0 0 68px 89px rgba(0, 0, 0, 0.75);
     box-shadow: 0 0 68px 89px rgba(0, 0, 0, 0.75);
   }
-
   to {
     background-color: grey;
     color: #f0eddb;
@@ -195,7 +85,6 @@
     -webkit-box-shadow: 0 0 68px 89px rgba(0, 0, 0, 0.75);
     box-shadow: 0 0 68px 89px rgba(0, 0, 0, 0.75);
   }
-
   to {
     background-color: grey;
     color: #f0eddb;
@@ -213,9 +102,9 @@
   font-weight: 700;
   font-family: 'MuseoModerno', cursive;
   -webkit-animation-name: example;
-  animation-name: example;
+          animation-name: example;
   -webkit-animation-duration: 4s;
-  animation-duration: 4s;
+          animation-duration: 4s;
   -webkit-box-shadow: 0 0 68px 0 rgba(0, 0, 0, 0.75);
   box-shadow: 0 0 68px 0 rgba(0, 0, 0, 0.75);
 }
@@ -251,7 +140,6 @@
     background-color: #ebe3ce;
     color: #080000;
   }
-
   to {
     background-color: #bfd890;
     color: #080000;
@@ -265,7 +153,6 @@
     background-color: #ebe3ce;
     color: #080000;
   }
-
   to {
     background-color: #bfd890;
     color: #080000;
@@ -288,9 +175,9 @@
 
 .step_div .allprojects_title:hover {
   -webkit-animation-name: all_projects_animation;
-  animation-name: all_projects_animation;
+          animation-name: all_projects_animation;
   -webkit-animation-duration: 1s;
-  animation-duration: 1s;
+          animation-duration: 1s;
   color: #080000;
   background-color: #bfd890;
   -webkit-box-shadow: 0 0 68px 0 rgba(0, 0, 0, 0.75);
@@ -320,7 +207,6 @@
   from {
     background-color: #f5efef;
   }
-
   to {
     background-color: yellowgreen;
   }
@@ -330,7 +216,6 @@
   from {
     background-color: #f5efef;
   }
-
   to {
     background-color: yellowgreen;
   }
@@ -338,9 +223,9 @@
 
 .step_div .single_step .project_name_fix:hover {
   -webkit-animation-name: project_name_fix_animation;
-  animation-name: project_name_fix_animation;
+          animation-name: project_name_fix_animation;
   -webkit-animation-duration: 0.5s;
-  animation-duration: 0.5s;
+          animation-duration: 0.5s;
   background-color: yellowgreen;
   cursor: pointer;
 }
@@ -353,7 +238,6 @@
   from {
     fill: black;
   }
-
   to {
     fill: #668d18;
   }
@@ -363,7 +247,6 @@
   from {
     fill: black;
   }
-
   to {
     fill: #668d18;
   }
@@ -371,10 +254,11 @@
 
 .step_div .single_step .completed_link_fix:hover {
   fill: #668d18;
+  cursor: pointer;
   -webkit-animation-name: completed_link_fix_animation;
-  animation-name: completed_link_fix_animation;
+          animation-name: completed_link_fix_animation;
   -webkit-animation-duration: 0.5s;
-  animation-duration: 0.5s;
+          animation-duration: 0.5s;
 }
 
 .step_div .single_step .death_line_fix {
@@ -426,9 +310,117 @@
   background-color: whitesmoke;
 }
 
+.step_div .single_step .completed_link:hover {
+  cursor: pointer;
+}
+
 .step_div .single_step .death_line {
   background-color: whitesmoke;
   width: 6.5rem;
   font-size: 0.9rem;
   font-weight: 800;
 }
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav {
+  height: 100%;
+  width: 160px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 5rem;
+}
+
+.sidenav .general {
+  margin-bottom: 3rem;
+}
+
+.sidenav .general div {
+  position: relative;
+  top: -3.5rem;
+  margin-left: 1rem;
+  text-decoration: none;
+  font-family: 'Holtwood One SC', serif;
+  font-size: 1rem;
+  color: #f3eaea;
+  display: block;
+}
+
+.sidenav .general div:hover {
+  color: #6ad324;
+  cursor: pointer;
+}
+
+.sidenav .projects_text {
+  text-align: center;
+  background-color: #918a8a;
+  margin-top: 1rem;
+  font-size: 1rem;
+  font-family: 'Holtwood One SC', serif;
+  color: #fff;
+  display: block;
+}
+
+@-webkit-keyframes p_names_animation {
+  from {
+    background-color: #726f6f;
+    color: #201f30;
+    font-weight: 400;
+    border-bottom: 1px solid #31e60d;
+  }
+  to {
+    background-color: white;
+    color: black;
+    font-weight: 900;
+    border-bottom: 5px solid #31e60d;
+  }
+}
+
+@keyframes p_names_animation {
+  from {
+    background-color: #726f6f;
+    color: #201f30;
+    font-weight: 400;
+    border-bottom: 1px solid #31e60d;
+  }
+  to {
+    background-color: white;
+    color: black;
+    font-weight: 900;
+    border-bottom: 5px solid #31e60d;
+  }
+}
+
+.sidenav #projects {
+  max-height: 25rem;
+  overflow-y: hidden;
+}
+
+.sidenav #projects a {
+  color: white;
+  margin-bottom: 1rem;
+  font-family: 'MuseoModerno', cursive;
+}
+
+.sidenav #projects a:hover {
+  -webkit-animation-name: p_names_animation;
+          animation-name: p_names_animation;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  color: black;
+  background-color: white;
+  font-weight: 900;
+  cursor: pointer;
+  border-bottom: 5px solid #31e60d;
+}
+
+.sidenav #projects::-webkit-scrollbar {
+  display: none;
+}
+/*# sourceMappingURL=style.css.map */
