--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -51,93 +51,6 @@
   }
 }
 
-.sidenav {
-  height: 100%;
-  width: 160px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  padding-top: 5rem;
-
-  .general {
-    margin-bottom: 3rem;
-
-    div {
-      position: relative;
-      top: -3.5rem;
-      margin-left: 1rem;
-      text-decoration: none;
-      font-family: 'Holtwood One SC', serif;
-      font-size: 1rem;
-      color: #f3eaea;
-      display: block;
-    }
-
-    div:hover {
-      color: #6ad324;
-      cursor: pointer;
-    }
-  }
-
-  .projects_text {
-    text-align: center;
-    background-color: rgb(145, 138, 138);
-    margin-top: 1rem;
-    font-size: 1rem;
-    font-family: 'Holtwood One SC', serif;
-    color: #fff;
-    display: block;
-  }
-
-  @keyframes p_names_animation {
-    from {
-      background-color: #726f6f;
-      color: rgb(32, 31, 48);
-      font-weight: 400;
-      border-bottom: 1px solid #31e60d;
-    }
-
-    to {
-      background-color: white;
-      color: rgb(0, 0, 0);
-      font-weight: 900;
-      border-bottom: 5px solid #31e60d;
-    }
-  }
-
-  #projects {
-    max-height: 25rem;
-    overflow-y: hidden;
-
-    a {
-      color: white;
-      margin-bottom: 1rem;
-      font-family: 'MuseoModerno', cursive;
-    }
-
-    a:hover {
-      animation-name: p_names_animation;
-      animation-duration: 1s;
-      color: rgb(0, 0, 0);
-      background-color: white;
-      font-weight: 900;
-      cursor: pointer;
-      border-bottom: 5px solid #31e60d;
-    }
-  }
-
-  #projects::-webkit-scrollbar {
-    display: none;
-  }
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
 @keyframes example {
   from {
     background-color: rgb(0, 0, 0);
@@ -284,6 +197,7 @@
 
     .completed_link_fix:hover {
       fill: rgb(102, 141, 24);
+      cursor: pointer;
       animation-name: completed_link_fix_animation;
       animation-duration: 0.5s;
     }
@@ -337,11 +251,101 @@
       background-color: whitesmoke;
     }
 
+    .completed_link:hover {
+      cursor: pointer;
+    }
+
     .death_line {
       background-color: whitesmoke;
       width: 6.5rem;
       font-size: 0.9rem;
       font-weight: 800;
     }
+  }
+}
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav {
+  height: 100%;
+  width: 160px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 5rem;
+
+  .general {
+    margin-bottom: 3rem;
+
+    div {
+      position: relative;
+      top: -3.5rem;
+      margin-left: 1rem;
+      text-decoration: none;
+      font-family: 'Holtwood One SC', serif;
+      font-size: 1rem;
+      color: #f3eaea;
+      display: block;
+    }
+
+    div:hover {
+      color: #6ad324;
+      cursor: pointer;
+    }
+  }
+
+  .projects_text {
+    text-align: center;
+    background-color: rgb(145, 138, 138);
+    margin-top: 1rem;
+    font-size: 1rem;
+    font-family: 'Holtwood One SC', serif;
+    color: #fff;
+    display: block;
+  }
+
+  @keyframes p_names_animation {
+    from {
+      background-color: #726f6f;
+      color: rgb(32, 31, 48);
+      font-weight: 400;
+      border-bottom: 1px solid #31e60d;
+    }
+
+    to {
+      background-color: white;
+      color: rgb(0, 0, 0);
+      font-weight: 900;
+      border-bottom: 5px solid #31e60d;
+    }
+  }
+
+  #projects {
+    max-height: 25rem;
+    overflow-y: hidden;
+
+    a {
+      color: white;
+      margin-bottom: 1rem;
+      font-family: 'MuseoModerno', cursive;
+    }
+
+    a:hover {
+      animation-name: p_names_animation;
+      animation-duration: 1s;
+      color: rgb(0, 0, 0);
+      background-color: white;
+      font-weight: 900;
+      cursor: pointer;
+      border-bottom: 5px solid #31e60d;
+    }
+  }
+
+  #projects::-webkit-scrollbar {
+    display: none;
   }
 }
