--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -36,6 +36,8 @@
 
 .navbar .navbar-brand {
   font-size: 2.5rem;
+  position: relative;
+  left: 3rem;
   font-family: 'Piedra', cursive;
   color: #f0eddb;
 }
