--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -25,6 +25,8 @@
 
   .navbar-brand {
     font-size: 2.5rem;
+    position: relative;
+    left: 3rem;
     font-family: 'Piedra', cursive;
     color: rgb(240, 237, 219);
   }
