update feature done

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,28 +4,24 @@
 @import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
-
 @-webkit-keyframes new_buttton_animation {
   from {
     background-color: white;
     width: 4rem;
     height: 3rem;
   }
-
   to {
     background-color: yellowgreen;
     width: 4.5rem;
     height: 3.5rem;
   }
 }
-
 @keyframes new_buttton_animation {
   from {
     background-color: white;
     width: 4rem;
     height: 3rem;
   }
-
   to {
     background-color: yellowgreen;
     width: 4.5rem;
@@ -60,9 +56,9 @@
 
 .navbar .new_buttton:hover {
   -webkit-animation-name: new_buttton_animation;
-  animation-name: new_buttton_animation;
+          animation-name: new_buttton_animation;
   -webkit-animation-duration: 1.2s;
-  animation-duration: 1.2s;
+          animation-duration: 1.2s;
   background-color: yellowgreen;
   width: 4.5rem;
   height: 3.5rem;
@@ -76,7 +72,6 @@
     -webkit-box-shadow: 0 0 68px 89px rgba(0, 0, 0, 0.75);
     box-shadow: 0 0 68px 89px rgba(0, 0, 0, 0.75);
   }
-
   to {
     background-color: grey;
     color: #f0eddb;
@@ -92,7 +87,6 @@
     -webkit-box-shadow: 0 0 68px 89px rgba(0, 0, 0, 0.75);
     box-shadow: 0 0 68px 89px rgba(0, 0, 0, 0.75);
   }
-
   to {
     background-color: grey;
     color: #f0eddb;
@@ -110,9 +104,9 @@
   font-weight: 700;
   font-family: 'MuseoModerno', cursive;
   -webkit-animation-name: example;
-  animation-name: example;
+          animation-name: example;
   -webkit-animation-duration: 4s;
-  animation-duration: 4s;
+          animation-duration: 4s;
   -webkit-box-shadow: 0 0 68px 0 rgba(0, 0, 0, 0.75);
   box-shadow: 0 0 68px 0 rgba(0, 0, 0, 0.75);
 }
@@ -148,7 +142,6 @@
     background-color: #ebe3ce;
     color: #080000;
   }
-
   to {
     background-color: #bfd890;
     color: #080000;
@@ -162,7 +155,6 @@
     background-color: #ebe3ce;
     color: #080000;
   }
-
   to {
     background-color: #bfd890;
     color: #080000;
@@ -185,9 +177,9 @@
 
 .step_div .allprojects_title:hover {
   -webkit-animation-name: all_projects_animation;
-  animation-name: all_projects_animation;
+          animation-name: all_projects_animation;
   -webkit-animation-duration: 1s;
-  animation-duration: 1s;
+          animation-duration: 1s;
   color: #080000;
   background-color: #bfd890;
   -webkit-box-shadow: 0 0 68px 0 rgba(0, 0, 0, 0.75);
@@ -205,6 +197,7 @@
   background-color: #e8ecf1;
   font-family: 'Holtwood One SC', serif;
   font-size: 0.7rem;
+  cursor: pointer;
 }
 
 .step_div .single_step .project_name_fix {
@@ -217,7 +210,6 @@
   from {
     background-color: #f5efef;
   }
-
   to {
     background-color: yellowgreen;
   }
@@ -227,7 +219,6 @@
   from {
     background-color: #f5efef;
   }
-
   to {
     background-color: yellowgreen;
   }
@@ -235,9 +226,9 @@
 
 .step_div .single_step .project_name_fix:hover {
   -webkit-animation-name: project_name_fix_animation;
-  animation-name: project_name_fix_animation;
+          animation-name: project_name_fix_animation;
   -webkit-animation-duration: 0.5s;
-  animation-duration: 0.5s;
+          animation-duration: 0.5s;
   background-color: yellowgreen;
   cursor: pointer;
 }
@@ -250,7 +241,6 @@
   from {
     fill: black;
   }
-
   to {
     fill: #668d18;
   }
@@ -260,7 +250,6 @@
   from {
     fill: black;
   }
-
   to {
     fill: #668d18;
   }
@@ -270,9 +259,9 @@
   fill: #668d18;
   cursor: pointer;
   -webkit-animation-name: completed_link_fix_animation;
-  animation-name: completed_link_fix_animation;
+          animation-name: completed_link_fix_animation;
   -webkit-animation-duration: 0.5s;
-  animation-duration: 0.5s;
+          animation-duration: 0.5s;
 }
 
 .step_div .single_step .death_line_fix {
@@ -388,7 +377,6 @@
     font-weight: 400;
     border-bottom: 1px solid #31e60d;
   }
-
   to {
     background-color: white;
     color: black;
@@ -404,7 +392,6 @@
     font-weight: 400;
     border-bottom: 1px solid #31e60d;
   }
-
   to {
     background-color: white;
     color: black;
@@ -426,9 +413,9 @@
 
 .sidenav #projects a:hover {
   -webkit-animation-name: p_names_animation;
-  animation-name: p_names_animation;
+          animation-name: p_names_animation;
   -webkit-animation-duration: 1s;
-  animation-duration: 1s;
+          animation-duration: 1s;
   color: black;
   background-color: white;
   font-weight: 900;
@@ -439,3 +426,4 @@
 .sidenav #projects::-webkit-scrollbar {
   display: none;
 }
+/*# sourceMappingURL=style.css.map */
