--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -158,6 +158,7 @@
       background-color: rgb(232, 236, 241);
       font-family: 'Holtwood One SC', serif;
       font-size: 0.7rem;
+      cursor:pointer;
     }
 
     .project_name_fix {
